src/objects/Needs_Assesment__c.object
<CustomObject>
    <fields>
        <fullName>CDs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>College_Plan__c</fullName>
        <label>College Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>College_Timeframe__c</fullName>
        <label>College Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete_PFCE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to show if the NA Provide Feedback about your Current Experience section is considered complete (TRUE) or partial (FALSE)</description>
        <label>Complete PFCE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Do_you_Rent_or_Own__c</fullName>
        <description>This fields stores the value of &quot;Do you own or rent your home?&quot; on the &quot;Housing&quot; tab.</description>
        <inlineHelpText>Do you own or rent your home?</inlineHelpText>
        <label>LEHS Rent or Own</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Own - Paid Off</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Prefer Not To Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBMS_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to show if the NA Extend the Benefits of your MemberShip section is considered complete (TRUE) or partial (FALSE)</description>
        <label>Complete EBMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMYS_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to show if the NA Earn More from Your Savings section is considered complete (TRUE) or partial (FALSE)</description>
        <label>Complete EMYS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Improvement_Plan__c</fullName>
        <label>Home Improvement Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Improvement_Timeframe__c</fullName>
        <label>Home Improvement Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Improvement__c</fullName>
        <label>Home Improvement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Housing_Last_Updated_On__c</fullName>
        <label>Housing Last Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LEAV_AnticipateFinance__c</fullName>
        <label>LEAV_AnticipateFinance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEAV_ContactPreferences__c</fullName>
        <label>LEAV_ContactPreferences</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEAV_CurrentBalance__c</fullName>
        <label>LEAV_CurrentBalance</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEAV_CurrentLoanProvider__c</fullName>
        <description>This field stores the value of &quot;If yes, Who is your current auto/vehicle loan provider?	&quot; on the &quot;Auto/Vehicle&quot; tab.</description>
        <label>LEAV_CurrentLoanProvider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chevron Federal Credit Union</fullName>
                </value>
                <value>
                    <fullName>Spectrum Credit Union</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Chase Bank</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
                <value>
                    <fullName>Capital One</fullName>
                </value>
                <value>
                    <fullName>Ally</fullName>
                </value>
                <value>
                    <fullName>USAA</fullName>
                </value>
                <value>
                    <fullName>Other Credit Union</fullName>
                </value>
                <value>
                    <fullName>Other Financial Institution</fullName>
                </value>
                <value>
                    <fullName>Dealer/Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Spectrum Federal Credit Union</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEAV_CurrentRate__c</fullName>
        <label>LEAV_CurrentRate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LEAV_Current__c</fullName>
        <label>LEAV_Current</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEAV_EndDateLoan__c</fullName>
        <label>LEAV_EndDateLoan</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEAV_Last_Updated_On__c</fullName>
        <label>LE Auto/Vehicle Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LEAV_Partially_Completed__c</fullName>
        <formula>If(LEAV_Last_Updated_On__c &gt;= Datetimevalue(&apos;1/1/2000 00:00&apos;), if( Member__r.NA_LEAV_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEAV_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEAV_PlanDate__c</fullName>
        <label>LEAV_PlanDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEAV_PlanningToBuy__c</fullName>
        <label>LEAV_PlanningToBuy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LECF_800_Feedback__c</fullName>
        <label>LECF_800_Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LECF_800__c</fullName>
        <defaultValue>false</defaultValue>
        <label>800 #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LECF_ATM_Feedback__c</fullName>
        <label>LECF_ATM_Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LECF_ATM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LECF_ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LECF_Branch_Feedback__c</fullName>
        <label>LECF_Branch_Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LECF_Branch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LECF_Comment__c</fullName>
        <label>LECF_Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LECF_Experience_Improvement_Feedback__c</fullName>
        <description>LECF_Experience_Improvement_Feedback</description>
        <inlineHelpText>LECF_Experience_Improvement_Feedback</inlineHelpText>
        <label>LECF_Experience_Improvement_Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LECF_Last_Updated_On__c</fullName>
        <label>Provide Feedback Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LECF_Member_Feedback__c</fullName>
        <label>LECF_Member_Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LECF_Mobile_banking_Feedback__c</fullName>
        <label>LECF_Mobile_banking_Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LECF_Mobile_banking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile banking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LECF_Online_banking_Feedback__c</fullName>
        <label>LECF_Online_banking_Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LECF_Online_banking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online banking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LECF_Partially_Completed__c</fullName>
        <formula>If(LECF_Last_Updated_On__c  &gt;= Date(2000,1,1), if(  Member__r.NA_LECF_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LECF_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LECP_Comments__c</fullName>
        <label>LECP_Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LECP_ContactPhone_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LECP_ContactPhone_No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LECP_ContactPhone_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LECP_ContactPhone_Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LECP_Last_Updated_On__c</fullName>
        <label>Contact Preferences Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LECP_Partially_Completed__c</fullName>
        <formula>If(LECP_Last_Updated_On__c &gt;= Date(2000,1,1), if( Member__r.NA_LECP_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LECP_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LECP_Written_Materials_Way_To_Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LECP_Written_Materials_Way_To_Send_Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LECP_Written_Materials_Way_To_Send_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LECP_Written_Materials_Way_To_Send_Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEEM_Comments__c</fullName>
        <label>LEEM_Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEEM_Deductible_Plan_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEEM_Deductible_Plan_No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEEM_Deductible_Plan_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEEM_Deductible_Plan_Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEEM_Deductible_Plan__c</fullName>
        <label>LEEM_Deductible_Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEEM_Health_Savings_Account_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEEM_Health_Savings_Account_No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEEM_Health_Savings_Account_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEEM_Health_Savings_Account_Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEEM_Health_Savings_Account__c</fullName>
        <label>LEEM_Health_Savings_Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEEM_Last_Updated_On__c</fullName>
        <label>LEEM_Last_Updated_On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEEM_Money_In_Primary_Account__c</fullName>
        <label>LEEM_Money_In_Primary_Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LEEM_Partially_Completed__c</fullName>
        <formula>If(LEEM_Last_Updated_On__c &gt;= Date(2000,1,1), if( Member__r.NA_LEEM_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEEM_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEEM_Retirement_Savings_Accounts_Comment__c</fullName>
        <label>LEEM_Retirement_Savings_Accounts_Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEEM_Savings_For_Retirement_401__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEEM_Savings_For_Retirement_401</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEEM_Savings_For_Retirement_IRA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEEM_Savings_For_Retirement_IRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEEM_Savings_For_Retirement_O_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEEM_Savings_For_Retirement_O_Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEEM_Savings_For_Retirement_O_R_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEEM_Savings_For_Retirement_O_R_Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEHS_1_Status__c</fullName>
        <description>Life Events Housing - Recommendation offer status</description>
        <inlineHelpText>Life Events Housing - Recommendation offer status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEHS_2_Status__c</fullName>
        <description>Life Events Housing - Recommendation offer status</description>
        <inlineHelpText>Life Events Housing - Recommendation offer status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEHS_Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEHS_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to show if the NA Life Events Housing section is considered complete (TRUE) or partial (FALSE)</description>
        <label>Complete LEHS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEHS_Current_Balance__c</fullName>
        <inlineHelpText>If own, what is your current balance?</inlineHelpText>
        <label>LEHS Current Balance</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LEHS_Current_Lender__c</fullName>
        <description>This field stores the value of &quot;If own, who is your current lender?&quot; on the &quot;Housing&quot; tab.</description>
        <inlineHelpText>If own, who is your current mortgage lender?</inlineHelpText>
        <label>LEHS Current Lender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_LEHS_Current_Lender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEHS_End_Date__c</fullName>
        <inlineHelpText>If own, what is the end date of the mortgage?</inlineHelpText>
        <label>LEHS End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEHS_End_Year__c</fullName>
        <label>LEHS_End_Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEHS_Have_Realtor__c</fullName>
        <inlineHelpText>If planning to purchase a house, do you have a realtor?</inlineHelpText>
        <label>LEHS Have Realtor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEHS_Last_Updated_On__c</fullName>
        <label>LE Housing Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEHS_Partially_Completed__c</fullName>
        <formula>If(LEHS_Last_Updated_On__c &gt;= Date(2000,1,1), if( Member__r.NA_LEHS_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEHS_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEHS_Planning_to_Purchase__c</fullName>
        <inlineHelpText>Are you planning to purchase a house?</inlineHelpText>
        <label>LEHS Planning to Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEHS_Purchase_When__c</fullName>
        <inlineHelpText>If planning to purchase a house, when?</inlineHelpText>
        <label>LEHS Purchase When</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEHS_Rate__c</fullName>
        <inlineHelpText>If own, what is your current rate?</inlineHelpText>
        <label>LEHS Current Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LEHS_Type_of_Mortgage__c</fullName>
        <label>LEHS_Type_of_Mortgage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 Year Fixed</fullName>
                </value>
                <value>
                    <fullName>20 Year Fixed</fullName>
                </value>
                <value>
                    <fullName>15 Year Fixed</fullName>
                </value>
                <value>
                    <fullName>7/1 ARM 30 Year</fullName>
                </value>
                <value>
                    <fullName>7/1 ARM 15 Year</fullName>
                </value>
                <value>
                    <fullName>5/1 ARM 30 Year</fullName>
                </value>
                <value>
                    <fullName>5/1 ARM 15 Year</fullName>
                </value>
                <value>
                    <fullName>HELOC 10/15 (10 year draw/15 year repayment)</fullName>
                </value>
                <value>
                    <fullName>Fixed Rate 2nd 15 year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEMD_ATM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMD_ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMD_At_another_financial_insti_YesNo__c</fullName>
        <label>LEMD_At_another_financial_insti_YesNo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEMD_At_another_financial_institution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMD_At another financial institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMD_CFCU_Spectrum_YesNo__c</fullName>
        <label>LEMD_CFCU_Spectrum_YesNo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEMD_CFCU_Spectrum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMD_CFCU/Spectrum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMD_CommentsDC__c</fullName>
        <label>LEMD_CommentsDC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEMD_CommentsForDD__c</fullName>
        <label>LEMD_CommentsForDD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEMD_In_person_branch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMD_In person(branch)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMD_Last_Updated_On__c</fullName>
        <label>MM Deposits Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEMD_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMD_Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMD_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMD_No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMD_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMD_Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMD_Partially_Completed__c</fullName>
        <formula>If(LEMD_Last_Updated_On__c &gt;= Date(2000,1,1), if( Member__r.NA_LEMD_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEMD_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Carry_Credit_Card_Balance__c</fullName>
        <label>LEMP_Carry_Credit_Card_Balance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer Not To Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEMP_Credit_Card_Usage_Cash_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Credit_Card_Usage_Cash_Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Credit_Card_Usage_Comments__c</fullName>
        <label>LEMP_Credit_Card_Usage_Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEMP_Credit_Card_Usage_Low_Interest_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Credit_Card_Usage_Low_Interest_Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Credit_Card_Usage_No_Annual_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Credit_Card_Usage_No_Annual_Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Credit_Card_Usage_Other__c</fullName>
        <label>LEMP_Credit_Card_Usage_Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEMP_Credit_Card_Usage_Reason_Comments__c</fullName>
        <label>LEMP_Credit_Card_Usage_Reason_Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEMP_Credit_Card_Usage_Rewards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Credit_Card_Usage_Rewards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Credit_Card_You_Use_Often__c</fullName>
        <label>LEMP_Credit_Card_You_Use_Often</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEMP_Debit_Card_Usage_Comments__c</fullName>
        <label>LEMP_Debit_Card_Usage_Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEMP_Debit_Card_Usage_Gasstation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Debit_Card_Usage_Gasstation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Debit_Card_Usage_Grocries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Debit_Card_Usage_Grocries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Debit_Card_Usage_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Debit_Card_Usage_Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Debit_Card_Usage_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Debit_Card_Usage_Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Debit_Card_Usage_Retail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Debit_Card_Usage_Retail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_International_Transfer_Comments__c</fullName>
        <label>LEMP_International_Transfer_Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEMP_International_Transfer_Frequency__c</fullName>
        <label>LEMP_International_Transfer_Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frequently, on a one-time basis</fullName>
                </value>
                <value>
                    <fullName>Frequently, on a recurring basis</fullName>
                </value>
                <value>
                    <fullName>Occasionally, on a one-time basis</fullName>
                </value>
                <value>
                    <fullName>Occasionally, on a recurring basis</fullName>
                </value>
                <value>
                    <fullName>Rarely</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEMP_Last_Updated_On__c</fullName>
        <label>MM Payment/Transfers Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEMP_Partially_Completed__c</fullName>
        <formula>If(LEMP_Last_Updated_On__c &gt;= Date(2000,1,1), if( Member__r.NA_LEMP_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEMP_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Individuals_A2A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Individuals_A2A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Individuals_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Individuals_ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Individuals_BillPay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Individuals_BillPay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Individuals_CC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Individuals_CC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Individuals_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Individuals_Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Individuals_DC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Individuals_DC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Individuals_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Individuals_Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_MoveMoney_A2A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_MoveMoney_A2A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_MoveMoney_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_MoveMoney_ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_MoveMoney_BillPay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_MoveMoney_BillPay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_MoveMoney_CC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_MoveMoney_CC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_MoveMoney_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_MoveMoney_Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_MoveMoney_DC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_MoveMoney_DC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_MoveMoney_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_MoveMoney_Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Recurring_A2A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Recurring_A2A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Recurring_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Recurring_ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Recurring_BillPay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Recurring_BillPay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Recurring_CC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Recurring_CC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Recurring_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Recurring_Check</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>